Fix broken styles

--- a/client/src/assets/styles/styles-default.css
+++ b/client/src/assets/styles/styles-default.css
@@ -79,6 +79,32 @@ textarea {
   display: block;
 }
 
+.btn-main {
+  background: none;
+  border: 1px solid #fff;
+  box-shadow: 0 0 1px 0 #7c7c7c;
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 16px;
+  margin: 0 auto 5px auto;
+  outline: none;
+  padding: 10px 10px;
+  transition: all 0.3s linear 0s;
+}
+
+.btn-main:hover {
+  background: #fff;
+  box-shadow: 0px 0px 10px -4px #000;
+  color: #F45050;
+  margin: -2px auto;
+}
+
+.tagline {
+  color: #fff;
+  text-shadow: 0 1px 1px #7a2929;
+}
+
 .pageHeader {
   color: #f2f2f2;
   font-family: 'Bangers', cursive;
