--- a/client/src/components/auth/Auth.css
+++ b/client/src/components/auth/Auth.css
@@ -1,3 +1,6 @@
+.login-signup-wrap {
+  margin: 60px 0 0 0;
+}
 .login-signup-wrap h2 {
   color: #f2f2f2;
   margin: 6px 0 15px 0;
